Bug 74599 - FILEOPEN RTF wrong font attributes in heading (font color)
Summary: FILEOPEN RTF wrong font attributes in heading (font color)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-02-06 03:00 UTC by Urmas
Modified: 2022-05-01 04:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
The document (52.62 KB, text/rtf)
2014-02-06 03:00 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2014-02-06 03:00:06 UTC
Created attachment 93504 [details]
The document

There are some issues with the attached document.

1. Some text is gray, while it should be black;
2. The heading "1" is not formatted properly.
Comment 1 Andras Timar 2014-03-31 16:18:53 UTC
Confirmed with 4.2.2, it was OK in 4.1.5 -> regression.
Comment 2 Michael Stahl 2014-04-10 12:02:57 UTC
split out the second problem as bug 77267 since it was
evidently broken by a different change
Comment 3 Michael Stahl 2014-04-10 14:00:20 UTC
regression from:

commit 5cf62a6ab450c25eb07a1ec08c857f17f674ef67
Author:     Ahmad H. Al Harthi <aalharthi@kacst.edu.sa>
AuthorDate: Mon Nov 4 15:37:48 2013 +0300

    First modification on the default template for the Writer
    
    Headings modified and resized based on discussions at
    http://nabble.documentfoundation.org/Default-Writer-Template-td4076271.html
Comment 4 Miklos Vajna 2014-04-12 14:08:02 UTC
The StylesNoDefault doc compat setting is only enabled for DOCX, not for RTF, that's why that commit causes a problem here.
Comment 5 Commit Notification 2014-04-12 14:47:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2df53ef5002270bfe788e383e95002f636a242d9

fdo#74599 RTF import: enable StylesNoDefault compat setting



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2014-04-12 15:07:09 UTC
-4-2 backport: https://gerrit.libreoffice.org/8945
Comment 7 Commit Notification 2014-04-15 19:47:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c76886856411a074a63b273c1709fbeeb005711a&h=libreoffice-4-2

fdo#74599 RTF import: enable StylesNoDefault compat setting


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 12:37:34 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]