fdo#74599 RTF import: enable StylesNoDefault compat setting

The Writer 'Heading 3' paragraph style is gray by default, but (just
like in case of DOCX) that shouldn't have any influence on the RTF
import result.

Fix this by moving the compat setting from the DOCX filter
implementation to the common dmapper.

Change-Id: I86c7cf1a66f82b438ce8379467773a88c9e229af